feat: guest favorites feature
